--- a/dele88.plist
+++ b/dele88.plist
@@ -4,7 +4,7 @@
 <plist version="1.0">
     <dict>
          <key>url</key>
-        <string>https://inovalcalabia.github.io/DELE.ipa</string>
+        <string>https://www.dropbox.com/s/o7r6dgj1xbp4bxu/DELE-UAT.ipa?dl=0</string>
         <key>CFBundleAllowMixedLocalizations</key>
         <true/>
         <key>CFBundleVersion</key>
